--- a/src/app/pomodoro/pomodoro.component.html
+++ b/src/app/pomodoro/pomodoro.component.html
@@ -1,1 +1,63 @@
-<p>pomodoro works!</p>
+<div class="timer-container">
+    <button (click)="model.toggleSettingsOpen()">Ustawienia</button>
+    <div class="settings" [hidden]="!model.isSettingsOpen()">
+        <div class="settings-group">
+            <label>Czas pracy</label>
+            <input type="number" 
+            [ngModel]="model.getSettings().getWorkTime()" (ngModelChange)="model.getSettings().setWorkTime($event)">
+        </div>
+        <div class="settings-group">
+            <label>Czas krótkiej przerwy</label>
+            <input type="number"
+            [ngModel]="model.getSettings().getShortBreakTime()" (ngModelChange)="model.getSettings().setShortBreakTime($event)">
+        </div>
+        <div class="setting-group">
+            <label>Czas długiej przerwy</label>
+            <input type="number"
+            [ngModel]="model.getSettings().getLongBreakTime()" (ngModelChange)="model.getSettings().setLongBreakTime($event)">
+        </div>
+        <div class="settings-group">
+            <label>Interwał</label>
+            <input type="number"
+            [ngModel]="model.getSettings().getInterval()" (ngModelChange)="model.getSettings().setInterval($event)">
+        </div>
+    </div>
+
+    <div class="states">
+        <div *ngFor="let stateIndex of getStatesNumbers()" 
+        [ngClass]="{
+            'work': isWorkState(stateIndex),
+            'short-break': isShortBreakState(stateIndex),
+            'long-break': isLongBreakState(stateIndex),
+            'current-state': isCurrentState(stateIndex),
+            'state': true
+        }">
+            
+        </div>
+    </div>
+
+    <div class="timer-state" [ngSwitch]="model.getTimer().getState()">
+        <span *ngSwitchCase="state.WORK"> PRACA </span>
+        <span *ngSwitchCase="state.SHORT_BREAK"> KRÓTKA PRZERWA </span>
+        <span *ngSwitchCase="state.LONG_BREAK"> DŁUGA PRZERWA </span> 
+    </div>
+    <div class="timer">{{model.getTimer().getTimeText()}}</div>
+
+    <div class="controls">
+        <!-- TODO: dodać przycisk rozpocznij przerwę -->
+        <button class="button" (click)="model.getTimer().pauseTimer()"
+            *ngIf="!model.getTimer().isTimerPause() && model.getTimer().isTimerRunning()">Pauza</button>
+        <button class="button" (click)="model.getTimer().startTimer()"
+            *ngIf="model.getTimer().isTimerPause() || !model.getTimer().isTimerRunning()">Start</button>
+        <button class="button" (click)="model.getTimer().stopTimer()"
+            *ngIf="model.getTimer().isTimerRunning()">Stop</button>
+    </div>
+    <button class="button" (click)="model.getTimer().ignoreBreak()"
+        *ngIf="model.isIgnoreBreakVisible()">
+        Pomiń przerwę
+    </button>
+    <button class="button" (click)="model.getTimer().addTime()"
+        *ngIf="model.isIgnoreBreakVisible()">
+        Dodaj czas
+    </button>
+</div>
