--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,8 +1,9 @@
 <div class="app-panel shadow">
-    <h3 class="panel-header">Projekty</h3>
+    <!-- <h3 class="panel-header">Projekty</h3> -->
+    
     <!-- TODO: ustawić odpowiednio styl do filtra -->
     <div class="filter-controls">
-      <input class="project-filter filter border" placeholder="Wyszukaj projektu"
+      <input class="project-filter filter border" placeholder="Wyszukaj projekt"
       (input)='model.filterProject($event.target.value)'>
       <button class="button filter-button"  (click)="model.toggleFilterOpen()"></button>
     </div>
@@ -43,35 +44,77 @@
       <button class="small-button button" (click)="searchFilter()">Szukaj</button>
       </div>
     </div>
-    <!-- TODO: zrobić globalny styl do listy oraz do jej elementów-->
-    <div id="projects-list" class="list border">
-      <div *ngFor='let project of model.getProjects()'>
-        <div [ngClass]="{'selected-list-item': model.isSelectedProject(project),
-                    'project': true,
-                    'list-item':true,
-                    'transparent-border':true}" 
-                    (click)='onProjectClick(project)'>
-          <div class="list-item-value">{{project.getName()}}</div>
-          <div class="list-item-options" 
-            (click)='onProjectMenuClick($event, project)'
-            [matMenuTriggerFor]="menu">
-            ...
-          </div>
-        </div>     
+  
+    <div class="transparent-border expansion-list"> 
+      <div class="expansion-list-header">
+        <span class="list-header-name">Listy</span>
+        <button class="button filter-button" (click)="model.toggleListsOpen()"></button>
       </div>
-      <div *ngIf="model.isAddingNewProject()" >
-        <input type="text" class="form-control" id="new-project-name" (keyup)="handleAddingNewProjectKeyUp($event)"
-        [ngModel]="model.getNewProjectName()" (ngModelChange)="model.setNewProjectName($event)">
-        <div class="buttons-container">
-            <button class="button small-button insert-button" id="save-subtask-button" 
-            (click)="addNewProject()">Zapisz</button>
-            <button class="button small-button insert-button" id="cancel-subtask-button"
-            (click)="closeAddingNewProject()">Anuluj</button>
+      <div id="special-list" class="list border" *ngIf="model.isListsOpen()">
+        <!-- TODO: zrobić sposób zaznaczania specjalnych list -->
+        <div [ngClass]="{'selected-list-item': false,
+                      'project': true,
+                      'list-item':true,
+                      'transparent-border':true}" 
+                      (click)='onImportantListClick()'>
+          <div class="list-item-value">Ważne</div>
+        </div>
+
+        <div [ngClass]="{'selected-list-item': false,
+                      'project': true,
+                      'list-item':true,
+                      'transparent-border':true}" 
+                      (click)='onTodayListClick()'>
+          <div class="list-item-value">Dzisiaj</div>
         </div>
       </div>
     </div>
     
-    <button class="button border" (click)='onCreateProjectClick()' *ngIf="!model.isAddingNewProject()">Dodaj projekt</button>
+
+    <div id="projects-container" 
+    [ngClass]="{
+      'projects-container': model.isProjectsOpen(),
+      'hidden-list': !model.isProjectsOpen(),
+      'transparent-border':true,
+      'expansion-list':true
+    }"
+    >
+      <div class="expansion-list-header">
+        <span class="list-header-name">Projekty</span>
+        <button class="button filter-button" (click)="model.toggleProjectsOpen()"></button>
+      </div>
+      <!-- TODO: zrobić globalny styl do listy oraz do jej elementów-->
+  
+        <div id="projects-list"  class="list border" *ngIf="model.isProjectsOpen()">
+          <div *ngFor='let project of model.getProjects()'>
+            <div [ngClass]="{'selected-list-item': model.isSelectedProject(project),
+                        'project': true,
+                        'list-item':true,
+                        'transparent-border':true}" 
+                        (click)='onProjectClick(project)'>
+              <div class="list-item-value">{{project.getName()}}</div>
+              <div class="list-item-options" 
+                (click)='onProjectMenuClick($event, project)'
+                [matMenuTriggerFor]="menu">
+                ...
+              </div>
+            </div>     
+          </div>
+          <div *ngIf="model.isAddingNewProject()" >
+            <input type="text" class="form-control" id="new-project-name" (keyup)="handleAddingNewProjectKeyUp($event)"
+            [ngModel]="model.getNewProjectName()" (ngModelChange)="model.setNewProjectName($event)">
+            <div class="buttons-container">
+                <button class="button small-button insert-button" id="save-subtask-button" 
+                (click)="addNewProject()">Zapisz</button>
+                <button class="button small-button insert-button" id="cancel-subtask-button"
+                (click)="closeAddingNewProject()">Anuluj</button>
+            </div>
+          </div>
+        </div>
+        <button class="button border" (click)='onCreateProjectClick()' *ngIf="!model.isAddingNewProject() && model.isProjectsOpen()">Dodaj projekt</button>
+  
+      
+  </div>
 </div>
 
 <mat-menu #menu="matMenu">
