--- a/src/app/project-details/project-details.component.css
+++ b/src/app/project-details/project-details.component.css
@@ -14,6 +14,7 @@
 
 .project-form{
     height: 100%;
+    overflow: auto;
 }
 
 /* TODO: te same style są w tesk-details.component.css. Spróbować przenieść to do styles.css */
