--- a/src/app/labels/labels.component.css
+++ b/src/app/labels/labels.component.css
@@ -14,6 +14,8 @@
 
 .label-name{
     width: 100%;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 /* TODO: zrobić styl wspólny dla wszystkich ikon */
