--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -1,7 +1,7 @@
 <div class="app-panel shadow">
     <div class="tool-panel">
         <h3 class="panel-header">{{model.getProject().getName()}}</h3>
-        <button class="button border" (click)="closeView()">X</button>
+        <button class="close-button" (click)="closeView()">X</button>
     </div>
     <form class="project-form">
 
