--- a/src/styles.css
+++ b/src/styles.css
@@ -270,12 +270,93 @@ html, body{
 }
 
 .filter-button{
-    width: 2em;
-    height: 2em;
+    width: 20px;
+    height: 20px;
     margin-top: auto;
     margin-bottom: auto;
-    margin-right: 4px;
-    margin-left: 4px;
+    /* margin-right: 4px;
+    margin-left: 4px; */
+    border: transparent;
+    padding: 5px;
+
+    border-radius: 4px;
+
+    background: url("./assets/icons/filter-icon.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-origin: content-box;
+}
+
+.filter-button:hover{
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+
+}
+
+.close-button{
+    height: 30px;
+    width: 30px;
+    background: url('./assets/icons/close-icon.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-origin: content-box;
+    border: transparent;
+    border-radius: 4px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.close-button:hover{
+    cursor: pointer;
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+
+}
+
+.edit-button{
+    background: url('./assets/icons/edit-icon.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-origin: content-box;
+    border: transparent;
+    border-radius: 4px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.small-item-button{
+    width: 23px;
+    height: 23px;
+}
+
+.small-accept-button{
+    width: 20px;
+    height: 20px;
+}
+
+.remove-button{
+    background: url('./assets/icons/remove-icon.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-origin: content-box;
+    border: transparent;
+    border-radius: 4px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.accept-button{
+    background: url('./assets/icons/accept-icon.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-origin: content-box;
+    border: transparent;
+    border-radius: 4px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 /* ================================== */
